# raylib_simple_platformer

./: CMakeLists.txt
include/common/: constants.hpp  types.hpp
include/components/: AnimationComponent.hpp  Component.hpp
include/game/: game.hpp  game_object.hpp  player.hpp
src/: main.cpp
src/components/: AnimationComponent.cpp
src/game/: game.cpp  player.cpp
